--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <img src="./src/assets/logo.png" alt="Logo da marca By Julia Ribeiro">
     </figure>
     <ul class="flex gap-10 items-center">
-      <li><a href="#">Portfólio</a></li>
-      <li><a href="#">Contato</a></li>
+      <li><a href="#portfolio">Portfólio</a></li>
+      <li><a href="#contact">Contato</a></li>
     </ul>
   </nav>
 
@@ -48,7 +48,7 @@
         <img src="./src/assets/julia-ribeiro.jpg" alt="Foto de perfil da Julia Ribeiro, Nail Designer">
       </figure>
     </div>
-    <div #portfolio class="!mt-10">
+    <div id="portfolio" class="!mt-10">
       <h1 class="text-center">Portfólio</h1>
       <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 p-4 auto-rows-[10px] !mt-3">
         <figure class="overflow-hidden rounded-lg shadow-md row-span-8">
@@ -91,7 +91,7 @@
     </div>
   </main>
 
-  <footer class="!mt-10 !mb-10">
+  <footer class="!mt-10 !mb-10" id="contact">
     <div class="px-4 flex flex-col gap-4">
 
       <!-- Título -->
