--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="absolute md:hidden top-27 opacity-0 animate-slide-in-right [animation-delay:800ms]">Banho em gel
           </div>
         </div>
-        <button class="w-[16rem]">
+        <button class="w-[16rem] cursor-pointer btnGetInTouch">
           <figure id="hero--cta--icon"></figure>
           <span class="text-white">Agende seu horário</span>
         </button>
@@ -96,7 +96,7 @@
 
       <!-- Título -->
       <div class="flex items-center justify-center">
-        <button class="w-[16rem]">
+        <button class="w-[16rem] cursor-pointer btnGetInTouch">
           <figure id="footer--cta--icon"></figure>
           <span class="text-white">Agende seu horário</span>
         </button>
