--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <li class="text-accent">|</li>
             <li class="flex items-center gap-2">✨ Banho em gel</li>
           </ul>
-          <div class="absolute md:hidden top-7 opacity-0 animate-slide-in-right [animation-delay:200ms]">Alongamentos
+          <div class="absolute md:hidden top-7 opacity-0 animate-slide-in-right [animation-delay:200ms]">💅 Alongamentos
           </div>
           <div class="absolute md:hidden top-17 right-0 opacity-0 animate-slide-in-left [animation-delay:500ms]">
-            Esmaltações</div>
-          <div class="absolute md:hidden top-27 opacity-0 animate-slide-in-right [animation-delay:800ms]">Banho em gel
+            🎨 Esmaltações</div>
+          <div class="absolute md:hidden top-27 opacity-0 animate-slide-in-right [animation-delay:800ms]">✨ Banho em gel
           </div>
         </div>
         <button class="w-[16rem] cursor-pointer btnGetInTouch">
