--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
             <li class="text-accent">|</li>
             <li class="flex items-center gap-2">✨ Banho em gel</li>
           </ul>
-          <div class="absolute md:hidden top-7 opacity-0 motion-safe:animate-slide-in-right [animation-delay:200ms]">💅 Alongamentos
+          <div class="absolute md:hidden top-7 opacity-0 motion-safe:animate-slide-in-right [animation-delay:200ms]">💅
+            Alongamentos
           </div>
-          <div class="absolute md:hidden top-17 right-0 opacity-0 motion-safe:animate-slide-in-left [animation-delay:500ms]">
+          <div
+            class="absolute md:hidden top-17 right-0 opacity-0 motion-safe:animate-slide-in-left [animation-delay:500ms]">
             🎨 Esmaltações</div>
-          <div class="absolute md:hidden top-27 opacity-0 motion-safe:animate-slide-in-right [animation-delay:800ms]">✨ Banho em gel
+          <div class="absolute md:hidden top-27 opacity-0 motion-safe:animate-slide-in-right [animation-delay:800ms]">✨
+            Banho em gel
           </div>
         </div>
         <button class="w-[16rem] cursor-pointer btnGetInTouch">
@@ -94,7 +97,7 @@
       <div
         class="flex flex-col items-center justify-center !pl-24  !pr-5 relative bg-accent rounded-[300px] w-[300px] max-w-300px h-[80px] on-scroll-animate md:opacity-0">
         <div
-          class="absolute -top-[20px] -left-[30px] overflow-hidden rounded-[50%] !border !border-solid !border-amber-100 h-[120px]">
+          class="absolute -top-[20px] -left-[30px] overflow-hidden rounded-full !border !border-solid !border-amber-100 h-[120px]">
           <figure class="shadow-md h-full w-full">
             <img class="!object-cover" src="./src/assets/portfolio/alongamento.jpg"
               alt="Foto de alongamento em gel vermelho" />
@@ -106,7 +109,7 @@
       <div
         class="flex flex-col items-center justify-center !pl-24  !pr-5 relative bg-accent rounded-[300px] w-[300px] max-w-300px h-[80px] on-scroll-animate md:opacity-0 ">
         <div
-          class="absolute -top-[20px] -left-[30px] overflow-hidden rounded-[50%] !border !border-solid !border-amber-100 h-[120px]">
+          class="absolute -top-[20px] -left-[30px] overflow-hidden rounded-full !border !border-solid !border-amber-100 h-[120px]">
           <figure class="shadow-md h-full w-full">
             <img class="!object-cover" src="./src/assets/portfolio/banho.jpg" alt="Foto de banho em gel brilhante" />
           </figure>
@@ -117,7 +120,7 @@
       <div
         class="flex flex-col items-center justify-center !pl-24  !pr-5 relative bg-accent rounded-[300px] w-[300px] max-w-300px h-[80px] on-scroll-animate md:opacity-0 ">
         <div
-          class="absolute -top-[20px] -left-[30px] overflow-hidden rounded-[50%] !border !border-solid !border-amber-100 h-[120px]">
+          class="absolute -top-[20px] -left-[30px] overflow-hidden rounded-full !border !border-solid !border-amber-100 h-[120px]">
           <figure class="shadow-md h-full w-full">
             <img class="!object-cover" src="./src/assets/portfolio/esmaltacao.jpg"
               alt="Foto de esmaltação em gel transparente" />
