fix: removing rounded in absolute element

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
       <div
         class="flex flex-col items-center justify-center !pl-24  !pr-5 relative bg-accent rounded-[300px] w-[300px] max-w-300px h-[80px] on-scroll-animate md:opacity-0">
         <div
-          class="absolute -top-[20px] -left-[30px] overflow-hidden rounded-full !border !border-solid !border-amber-100 h-[120px]">
-          <figure class="shadow-md h-full w-full">
+          class="absolute -top-[20px] -left-[30px] overflow-hidden rounded-full h-[120px]">
+          <figure class="shadow-md h-full w-full rounded-full !border !border-solid !border-amber-100 ">
             <img class="!object-cover" src="./src/assets/portfolio/alongamento.jpg"
               alt="Foto de alongamento em gel vermelho" />
           </figure>
@@ -109,8 +109,8 @@
       <div
         class="flex flex-col items-center justify-center !pl-24  !pr-5 relative bg-accent rounded-[300px] w-[300px] max-w-300px h-[80px] on-scroll-animate md:opacity-0 ">
         <div
-          class="absolute -top-[20px] -left-[30px] overflow-hidden rounded-full !border !border-solid !border-amber-100 h-[120px]">
-          <figure class="shadow-md h-full w-full">
+          class="absolute -top-[20px] -left-[30px] overflow-hidden h-[120px]">
+          <figure class="shadow-md h-full w-full rounded-full !border !border-solid !border-amber-100">
             <img class="!object-cover" src="./src/assets/portfolio/banho.jpg" alt="Foto de banho em gel brilhante" />
           </figure>
         </div>
@@ -120,8 +120,8 @@
       <div
         class="flex flex-col items-center justify-center !pl-24  !pr-5 relative bg-accent rounded-[300px] w-[300px] max-w-300px h-[80px] on-scroll-animate md:opacity-0 ">
         <div
-          class="absolute -top-[20px] -left-[30px] overflow-hidden rounded-full !border !border-solid !border-amber-100 h-[120px]">
-          <figure class="shadow-md h-full w-full">
+          class="absolute -top-[20px] -left-[30px] overflow-hidden h-[120px]">
+          <figure class="shadow-md h-full w-full rounded-full !border !border-solid !border-amber-100">
             <img class="!object-cover" src="./src/assets/portfolio/esmaltacao.jpg"
               alt="Foto de esmaltação em gel transparente" />
           </figure>
