--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@
     </div>
     <div id="pricing" class="!mt-20 !py-8 flex flex-col items-center justify-center gap-14">
       <div
-        class="flex flex-col items-center justify-center !pl-24  !pr-5 relative bg-accent rounded-[300px] w-[300px] max-w-300px h-[80px] on-scroll-animate md:opacity-0">
-        <div
-          class="absolute -top-[20px] -left-[30px] overflow-hidden rounded-full h-[120px]">
+        class="flex flex-col items-center justify-center !pl-24  !pr-5 relative bg-accent rounded-[300px] w-[300px] max-w-300px h-[80px] on-scroll-animate opacity-0">
+        <div class="absolute -top-[20px] -left-[30px] w-[130px] !p-2 overflow-hidden h-[120px]">
           <figure class="shadow-md h-full w-full rounded-full !border !border-solid !border-amber-100 ">
             <img class="!object-cover" src="./src/assets/portfolio/alongamento.jpg"
               alt="Foto de alongamento em gel vermelho" />
@@ -107,9 +106,8 @@
         <p class="text-amber-100"><b>R$ 120,00</b></p>
       </div>
       <div
-        class="flex flex-col items-center justify-center !pl-24  !pr-5 relative bg-accent rounded-[300px] w-[300px] max-w-300px h-[80px] on-scroll-animate md:opacity-0 ">
-        <div
-          class="absolute -top-[20px] -left-[30px] overflow-hidden h-[120px]">
+        class="flex flex-col items-center justify-center !pl-24  !pr-5 relative bg-accent rounded-[300px] w-[300px] max-w-300px h-[80px] on-scroll-animate opacity-0 ">
+        <div class="absolute -top-[20px] -left-[30px] w-[130px] !p-2 overflow-hidden h-[120px]">
           <figure class="shadow-md h-full w-full rounded-full !border !border-solid !border-amber-100">
             <img class="!object-cover" src="./src/assets/portfolio/banho.jpg" alt="Foto de banho em gel brilhante" />
           </figure>
@@ -118,9 +116,8 @@
         <p class="text-amber-100"><b>R$ 90,00</b></p>
       </div>
       <div
-        class="flex flex-col items-center justify-center !pl-24  !pr-5 relative bg-accent rounded-[300px] w-[300px] max-w-300px h-[80px] on-scroll-animate md:opacity-0 ">
-        <div
-          class="absolute -top-[20px] -left-[30px] overflow-hidden h-[120px]">
+        class="flex flex-col items-center justify-center !pl-24  !pr-5 relative bg-accent rounded-[300px] w-[300px] max-w-300px h-[80px] on-scroll-animate opacity-0 ">
+        <div class="absolute -top-[20px] -left-[30px] overflow-hidden h-[120px] w-[130px] !p-2">
           <figure class="shadow-md h-full w-full rounded-full !border !border-solid !border-amber-100">
             <img class="!object-cover" src="./src/assets/portfolio/esmaltacao.jpg"
               alt="Foto de esmaltação em gel transparente" />
